# av-demo

./: .gitignore  AGENTS.md  AUDIO_QUALITY_RESEARCH.md  CLEANUP_INVENTORY.md  Cargo.toml  README.md  dev-server.sh  flake.nix  justfile  package-lock.json  package.json  plan.md  playwright.config.js
.direnv/: flake-profile-1-link
apps/chat-ui/: esbuild.config.mjs  index.html  main.ts  server.js  styles.css  tsconfig.json
apps/chat-ui/src/: ambient.d.ts  index.tsx  types.ts  utils.ts
apps/chat-ui/src/audio/: capture.ts  playback.ts
apps/chat-ui/src/audio/worklets/: capture-worklet.js
apps/chat-ui/src/bridge/: audio-moq.ts  moq.ts
apps/chat-ui/src/chat/: controller.ts
apps/chat-ui/src/ui/: App.tsx  ChatView.tsx  Onboarding.tsx
crates/control-plane-step3/: Cargo.toml
crates/control-plane-step3/src/: lib.rs
crates/control-plane-step3/tests/: moq_control_plane.rs
crates/marmot-chat/: Cargo.toml  README.md
crates/marmot-chat/src/: lib.rs  media_crypto.rs  messages.rs  scenario.rs  wasm.rs
crates/marmot-chat/src/controller/: error.rs  events.rs  local_transport.rs  mod.rs  services.rs  state.rs
crates/marmot-chat/src/controller/state/: core.rs  handshake.rs  member.rs  message.rs  mod.rs  part1.rs  part2.rs  ready.rs  types.rs  utils.rs
crates/marmot-chat/src/wasm/: controller_bridge.rs  identity.rs  mod.rs  moq_bridge.rs  nostr_client.rs  part1a.rs  part1b.rs  part2.rs  part3.rs  part4.rs  wrapper_utils.rs
crates/marmot-chat/tests/: media_encryption_integration.rs  step4_flow.rs
crates/marmot-chat/tests/support/: mod.rs  scenario.rs
crates/mdk-wasm/: Cargo.toml  README.md
crates/mdk-wasm/src/: lib.rs
design/: refactor_prompt.txt
docs/: AUDIO_FRAME_DROP_INVESTIGATION.md
plans/: CLEANUP_INVENTORY.md  MOQ_CHAT_SERVER.md  MOQ_MARMOT_AV_NOTES.md  MOQ_MARMOT_AV_PLAN.md  MOQ_MARMOT_AV_SPEC.md  NOSTR_AUTH.md  PHASE_1.md  spaghetti.md
scripts/: dev.sh  lib-nostr.sh  run-web.sh  test-web.sh
tests/: README.md  audio-integrity.spec.js  debug-audio-frames.spec.js  manual-ui-flow.spec.js  page-a.html  page-b.html  server.js  step2-demo.spec.js  step4-chat.spec.js  step5-audio.spec.js  step6-audio-e2e.spec.js
