[package]
name = "control-plane-step3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

nostr = { version = "0.43", default-features = false, features = ["std", "nip44"] }

mdk-core = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-core", default-features = false }
mdk-memory-storage = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-memory-storage", default-features = false }
mdk-storage-traits = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-storage-traits", default-features = false }

quinn = { version = "0.11.9", default-features = false, features = ["platform-verifier", "runtime-tokio", "bloom"] }

moq-lite = { version = "0.7.1", path = "/Users/justin/code/moq/moq/rs/moq" }
moq-native = { version = "0.8.3", path = "/Users/justin/code/moq/moq/rs/moq-native" }
web-transport-quinn = "0.8.1"
