[package]
name = "marmot-chat"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Shared core + WASM bindings + fixtures for the Marmot chat demo"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.21"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "0.2"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "=0.3.77"
log = "0.4"
futures = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
url = "2"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "WebSocket", "MessageEvent", "Event", "ErrorEvent", "BinaryType"] }

# Media encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Direct feature unification for OpenMLS crates to ensure WASM/std compat
openmls = { version = "0.7.0", default-features = false, features = ["js"] }
openmls_traits = { version = "0.4.0", default-features = false }
openmls_basic_credential = { version = "0.4.0", default-features = false }
openmls_rust_crypto = { version = "0.4.0", default-features = false }
openmls_memory_storage = { version = "0.4.0", default-features = false }

# Nostr - required for event handling
nostr = { version = "0.43", default-features = false, features = ["std", "nip44"] }

# Local MDK crates - optional until secp256k1 toolchain for WASM is present
mdk-core = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-core", default-features = false }
mdk-memory-storage = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-memory-storage", default-features = false }
mdk-storage-traits = { version = "0.5.0", path = "/Users/justin/code/moq/mdk/crates/mdk-storage-traits", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "=0.3.50"
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["panic-hook"]
panic-hook = ["console_error_panic_hook"]
